--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <!-- <link rel="icon" type="image/svg+xml" href="/vite.svg" /> -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-    <title>Aayush Shrestha</title>
+    <link rel="icon" sizes="180x180" href="./src/assets/apple-touch-icon.png">
+    <title>Aayush Shrestha - Web Developer</title>
   </head>
   <body style="background-color: #0D1117;">
     <div id="root"></div>
